[package]
name = "sonar"
version = "0.0.2"
edition = "2024"
description = "Simple data transfer protocol using audio signals"
authors = ["Yrrrrrf"]
documentation = "http://docs.rs/sonar"
repository = "https://github.com/Yrrrrrf/sonar"
license = "MIT"
exclude = [
    "resources/temp/",  # some svg, logs and other resources 
    "resources/docs/",  # some svg, logs and other resources 
]

# add optimizations for the dependencies
[profile.release]
lto = true          # link-time optimization (LTO)
opt-level = 3       # optimization level
# codegen-units = 16   # number of threads to use for codegen


[dependencies]
# DEV DEPS
# dev_utils = { path = "../dev_utils/dev_utils/" }  # local crate (dev-utils)
dev_utils = "0.1.1"  # local crate (dev-utils)
thiserror = "2.0.11"  # error handling

# DATA TRANSFER PROTOCOL dependencies
cpal = "0.15.3"  # code for audio input/output
rustfft = "6.2.0"  # FFT (Fast Fourier Transform)
bytes = { version = "1.10.0", features = ["serde"] }  # Efficient byte handling
lazy_static = "1.5.0"  # lazy initialization

clap = { version = "4.5.30", optional = true}  # command line arguments

# TESTING DEPENDENCIES
rand = "0.9.0"  # random number generation

[dev-dependencies]
criterion = "0.5.1"  # benchmarking


[features]
cli = ["clap"]  # Enables CLI-specific functionality

full = [
    "cli",
]  # complete production features
