[package]
name = "sonar"
version = "0.0.5"
edition = "2024"
description = "Simple data transfer protocol using audio signals"
authors = ["Yrrrrrf"]
documentation = "http://docs.rs/sonar"
repository = "https://github.com/Yrrrrrf/sonar"
license = "MIT"
exclude = [
    "resources/",  # some svg, logs and other resources
    "docs/",  # some svg, logs and other resources
]

# add optimizations for the dependencies
[profile.release]
lto = true          # link-time optimization (LTO)
opt-level = 3       # optimization level
# codegen-units = 16   # number of threads to use for codegen


[dependencies]
# DEV DEPS
# dev_utils = { path = "../dev_utils/dev_utils/" }  # local crate (dev-utils)
dev_utils = "0.1.4"  # local crate (dev-utils)

# DATA TRANSFER PROTOCOL dependencies
cpal = "0.15.3"  # code for audio input/output
ctrlc = "3.4.7"  # handling Ctrl+C
# rustfft = "6.2.0"  # FFT (Fast Fourier Transform)
bytes = { version = "1.10.1", features = ["serde"] }  # Efficient byte handling
lazy_static = "1.5.0"

# clap = { version = "4.5.30", features = ["derive"], optional = true}  # command line arguments
clap = { version = "4.5.39", features = ["derive"]}  # command line arguments

# TESTING DEPENDENCIES
rand = "0.9.1"  # random number generation

[dev-dependencies]
criterion = "0.6.0"  # benchmarking


[features]
# cli = ["clap"]  # Enables CLI-specific functionality

full = [
    # "cli",
]  # complete production features
